--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,4 +8,17 @@ spring:
           auth: true
           starttls:
             enable: true
+          connectiontimeout: 5000
+          writetimout: 5000
+          timeout: 5000
 
+resilience4j.retry:
+  configs:
+    default:
+      maxAttempts: 3
+      waitDuration: 100ms
+      enableExponentialBackoff: true
+      exponentialBackoffMultiplier: 2
+      retryExceptions:
+        - org.springframework.mail.MailException
+      ignoreExceptions: []
