--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -21,4 +21,5 @@ resilience4j.retry:
       exponentialBackoffMultiplier: 2
       retryExceptions:
         - org.springframework.mail.MailException
+        - java.io.IOException
       ignoreExceptions: []
