GEM-96 | remove email healthcheck

--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -2,3 +2,8 @@ spring:
   mail:
     username: ${EMAIL_USERNAME}
     password: ${EMAIL_PASSWORD}
+
+management:
+  health:
+    mail:
+      enabled: false
