--- a/src/main/resources/application-integration.yaml
+++ b/src/main/resources/application-integration.yaml
@@ -10,3 +10,12 @@ spring:
     username: spring
     password: boot
 
+
+wiremock:
+  server:
+    port: 9999
+
+attachment-store:
+  url: http://localhost:${wiremock.server.port}
+  read-timeout: 1000ms
+  connect-timeout: 1000ms
