--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -7,3 +7,8 @@ management:
   health:
     mail:
       enabled: false
+
+attachment-store:
+  url: http://${ATTACHMENT_STORE_SERVICE_SERVICE_HOST}:8080
+  read-timeout: 1000ms
+  connect-timeout: 1000ms
