--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -25,3 +25,17 @@ resilience4j.retry:
         - org.springframework.mail.MailException
         - java.io.IOException
       ignoreExceptions: []
+    attachmentStore:
+      maxAttempts: 3
+      waitDuration: 100ms
+      enableExponentialBackoff: true
+      exponentialBackoffMultiplier: 2
+      retryExceptions:
+        - org.springframework.web.client.HttpServerErrorException
+        - java.io.IOException
+        - pl.edu.agh.gem.internal.client.RetryableAttachmentStoreClientException
+      ignoreExceptions: [ ]
+
+attachment-store:
+  read-timeout: 1000ms
+  connect-timeout: 1000ms
