--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -12,3 +12,13 @@ attachment-store:
   url: http://${ATTACHMENT_STORE_SERVICE_SERVICE_HOST}:8080
   read-timeout: 1000ms
   connect-timeout: 1000ms
+
+authenticator:
+  url: http://${AUTHENTICATOR_SERVICE_SERVICE_HOST}:8080
+  read-timeout: 1000ms
+  connect-timeout: 1000ms
+
+user-details-manager-client:
+  url: http://${USER_DETAILS_MANAGER_SERVICE_SERVICE_HOST}:8080
+  read-timeout: 1000ms
+  connect-timeout: 1000ms
