--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -35,7 +35,35 @@ resilience4j.retry:
         - java.io.IOException
         - pl.edu.agh.gem.internal.client.RetryableAttachmentStoreClientException
       ignoreExceptions: [ ]
+    authenticator:
+      maxAttempts: 3
+      waitDuration: 100ms
+      enableExponentialBackoff: true
+      exponentialBackoffMultiplier: 2
+      retryExceptions:
+        - org.springframework.web.client.HttpServerErrorException
+        - java.io.IOException
+        - pl.edu.agh.gem.internal.client.RetryableAuthenticatorClientException
+      ignoreExceptions: [ ]
+    userDetailsManager:
+      maxAttempts: 3
+      waitDuration: 100ms
+      enableExponentialBackoff: true
+      exponentialBackoffMultiplier: 2
+      retryExceptions:
+        - org.springframework.web.client.HttpServerErrorException
+        - java.io.IOException
+        - pl.edu.agh.gem.internal.client.RetryableUserDetailsManagerClientException
+      ignoreExceptions: [ ]
 
 attachment-store:
+  read-timeout: 1000ms
+  connect-timeout: 1000ms
+  
+authenticator:
+  read-timeout: 1000ms
+  connect-timeout: 1000ms
+
+user-details-manager-client:
   read-timeout: 1000ms
   connect-timeout: 1000ms
